--- a/login.html
+++ b/login.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
+
     <title>Login</title>
 </head>
 <body>
-    <section>
-        <h2>Login</h2>
-        <form id="loginForm">
-            <label>Email</label>
+    
+    <header>
+        <nav> 
+            <a class="nav" href="index.html">Inicio</a>
+            <a class="nav" href="registro.html">Registrarse</a>
+            <a class="nav" href="login.html">Ingresar</a>
+            <a class="nav" href=".html">Disabled</a>
+            <a class="nav" href=".html">Mundo Stard Wars</a>
             
-            <input type="email" placeholder="...." id="email" required autofocus>
-            <label>Password</label>
-            <input type="password" placeholder="...." id="password" required>
-            <input type="submit" value="Ingresar">
-        </form>
-        <p>No tienes una cuenta? <a href="registro.html">Registrarse</a></p>
-    </section>
+        </nav>
+        <section>
+            <h2>Login</h2>
+            <form id="loginForm">
+                <label>Email</label>
+                Probando pushear al remoto
+                <input type="email" placeholder="...." id="email" required autofocus>
+                <label>Password</label>
+                <input type="password" placeholder="...." id="password" required>
+                <input type="submit" value="Ingresar">
+            </form>
+            <p>No tienes una cuenta? <a href="registro.html">Registrarse</a></p>
+        </section>
+    </header>
 
     <script src="js/login.js"></script>
 </body>
