--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link text-light" aria-current="page" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Registrarse</a>
+                    <a class="nav-link text-light" href="registro.html">Registrarse</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-light" href="login.html">Ingresar</a>
