--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <title>Login</title>
 </head>
 <body>
-    
+     <body class="imagenFondo">
     <header>
         <nav> 
             <a class="nav" href="index.html">Inicio</a>
