--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/nav.css">
-
+    <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
 <body>
