--- a/registro.html
+++ b/registro.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <link rel="stylesheet" href="../css/registro.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
+    <link rel="stylesheet" href="css/nav.css">
 <body class="bodyRegistrarse">
     <header class="headerRegistrarse">
         <a class="anclaLogo" href="../index.html">
