Quinto commit algunos arreglos

--- a/nav.html
+++ b/nav.html
@@ -1,8 +1,9 @@
-<nav> 
+<nav class="navbar navbar-expand-lg bg-black text-light text-center nav-underline">
+    <div class="container-fluid">> 
     <a class="nav" href="index.html">Inicio</a>
     <a class="nav" href="acercade.html">Registrarse</a>
     <a class="nav" href="contact.html">Ingresar</a>
     <a class="nav" href="form.html">Disabled</a>
     <a class="nav" href="sucursales.html">Mundo Stard Wars</a>
-    
+    </div>  
 </nav>
