--- a/login.html
+++ b/login.html
@@ -1,39 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/nav.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Login</title>
-</head>
-<body>
-     <body class="imagenFondo">
-    <header>
-        <nav> 
-            <a class="nav" href="index.html">Inicio</a>
-            <a class="nav" href="registro.html">Registrarse</a>
-            <a class="nav" href="login.html">Ingresar</a>
-            <a class="nav" href=".html">Disabled</a>
-            <a class="nav" href=".html">Mundo Stard Wars</a>
-            
-        </nav>
-        <section>
-            <h2>Login</h2>
-            <form id="loginForm">
-                <label>Email</label>
-                Probando pushear al remoto
-                <input type="email" placeholder="...." id="email" required autofocus>
-                <label>Password</label>
-                <input type="password" placeholder="...." id="password" required>
-                <input type="submit" value="Ingresar">
-            </form>
-            <p>No tienes una cuenta? <a href="registro.html">Registrarse</a></p>
-        </section>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/nav.css">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Login</title>
+    </head>
+    <body class="imagenFondo">
 
+        <header>
+            <nav class="navbar navbar-expand-lg bg-black text-light text-center nav-underline">
+                <div class="container-fluid">          
+                    <a class="nav-link" href="index.html">Inicio</a>               
+                    <a class="nav-link" href=".html">Ir a</a>
+                    <a class="nav-link" href=".html">Mundo Stard Wars</a>
+                </div>
+            </nav>
+        </header>
+
+        <section>
+            <div class="container bg-opacity-75">
+              <div class="row justify-content-center">
+                <div class="col-md-6">
+                  <div class="card text-bg-dark">
+                    <div class="card-body">
+                        <h2 class="text-center text-info fs-4 fw-semibold">Login</h2>
+                        <form class="has-validation" id="loginForm" novalidate>
+                            <div class="m-2 p-1">
+                                <label class="form-label">Email</label>
+                                <div class="input-group">
+                                    <span class="input-group-text">@</span>
+                                <input class="form-control is-invalid" type="email" placeholder="...." id="email" required autofocus>
+                            </div>
+                                <div class="valid-feedback">Se ve bien!</div>
+                            </div>
+                            <div class="form m-2 p-1">
+                                <label class="form-label">Password</label>
+                                <div class="input-group">
+                                    <span class="input-group-text">***</span>
+                                <input class="form-control is-invalid" type="password" placeholder="...." id="password" required>
+                            </div>
+                                <div class="valid-feedback">Se ve bien!</div>
+                            </div>
+                            <div class="text-center">
+                            <button class="btn btn-outline-light mt-1 mb-2" type="submit">Ingresar</button>
+                            </div>
+                        </form>
+                        <div class="card-footer text-center">
+                        <span class="card-text text-center mt-1">No tienes una cuenta? <a class="card-link text-decoration-none text-info" href="registro.html">Registrate!</a></span>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </section>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/login.js"></script>
 </body>
 </html>
