Agregando verificador de datos
Agregando archivo login js para verificar campos de mail y password, modificando el login html

--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                                 <div class="valid-feedback">Se ve bien!</div>
                             </div>
                             <div class="text-center">
-                            <button class="btn btn-outline-light mt-1 mb-2" type="submit">Ingresar</button>
+                            <button class="btn btn-outline-light mt-1 mb-2" type="button" onclick="verificarIngreso()">Ingresar</button>
                             </div>
                         </form>
                         <div class="card-footer text-center">
