octavo commit - redireccion login a dashboard.html uso de localStorage

--- a/registro.html
+++ b/registro.html
@@ -11,10 +11,12 @@
     
 <body class="bodyRegistrarse">
     <header class="headerRegistrarse">
-        <a class="anclaLogo" href="index.html">
-            <i class="fas fa-film" aria-hidden="true"></i>
-            <span>Inicio</span>
-        </a>
+        <div class="logo">
+            <a class="anclaLogo" href="index.html">
+                <i class="fas fa-film" aria-hidden="true"></i>
+                <span>Inicio</span>
+            </a>
+        </div>
     </header>
 
     <div class="container">
@@ -77,6 +79,6 @@
     <script>
         AOS.init();
     </script>
-   <script src="../js/valida_registrarse.js"></script>
+   <!--<script src="../js/valida_registrarse.js"></script>-->
 </body>
 </html>
