--- a/login.html
+++ b/login.html
@@ -4,20 +4,25 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/login.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/style.css">
         <title>Login</title>
     </head>
     <body class="imagenFondo">
 
         <header>
-            <nav class="navbar navbar-expand-lg bg-black text-light text-center nav-underline">
-                <div class="container-fluid">          
-                    <a class="nav-link" href="index.html">Inicio</a>               
-                    <a class="nav-link" href=".html">Ir a</a>
-                    <a class="nav-link" href=".html">Mundo Stard Wars</a>
+            <nav>
+                <div class="container-fluid bg-black text-info text-center fs-6 mb-2">
+                    <ul class="nav justify-content-around nav-underline">
+                        <li class="nav-item">
+                            <a class="nav-link text-info" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info" href="#">Ir a</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info" href="#">Mundo Stard Wars</a>
+                        </li>
+                    </ul>                              
                 </div>
             </nav>
         </header>
@@ -31,20 +36,22 @@
                         <h2 class="text-center text-info fs-4 fw-semibold">Login</h2>
                         <form class="has-validation" id="loginForm" novalidate>
                             <div class="m-2 p-1">
-                                <label class="form-label">Email</label>
+                                <label class="form-label text-info">Email</label>
                                 <div class="input-group">
-                                    <span class="input-group-text">@</span>
-                                <input class="form-control is-invalid" type="email" placeholder="...." id="email" required autofocus>
-                            </div>
-                                <div class="valid-feedback">Se ve bien!</div>
+                                    <span class="input-group-text back">@</span>
+                                    <input class="form-control back" type="email" placeholder="...." id="email" required autofocus>
+                                    <div class="invalid-feedback mt-2">Por favor ingrese un email válido.</div>
+                                    <div class="valid-feedback mt-2">Se ve bien!</div>
+                                </div>                            
                             </div>
                             <div class="form m-2 p-1">
-                                <label class="form-label">Password</label>
+                                <label class="form-label text-info">Password</label>
                                 <div class="input-group">
-                                    <span class="input-group-text">***</span>
-                                <input class="form-control is-invalid" type="password" placeholder="...." id="password" required>
-                            </div>
-                                <div class="valid-feedback">Se ve bien!</div>
+                                    <span class="input-group-text back">* * *</span>
+                                    <input class="form-control back" type="password" placeholder="...." id="password" required>
+                                    <div class="invalid-feedback mt-2">Por favor ingrese una contraseña válida.</div>
+                                    <div class="valid-feedback mt-2">Se ve bien!</div>
+                                </div>                                
                             </div>
                             <div class="text-center">
                             <button class="btn btn-outline-light mt-1 mb-2" type="button" onclick="verificarIngreso()">Ingresar</button>
