--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/footer.css">
    <link rel="stylesheet" href="css/nav.css">
-  
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,7 +60,7 @@
     </header>
     <main>
       <h2 class="animate__animated animate__backInRight">Star Wars</h2>
-      <img src="img/sw_logo_stacked_2x-52b4f6d33087_7ef430af.png" alt="Star Wars" width="500 px">
+      <img src="Img/sw_logo_stacked_2x-52b4f6d33087_7ef430af.png" alt="Star Wars" width="500 px">
       <br><br>
     </main>
     <footer class="center">
@@ -85,6 +84,36 @@
     </footer>
    
     </section>
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+    <div class="container-fluid bg-black text-light text-center">
+        <ul class="nav justify-content-center nav-underline">
+            <li class="nav-item">
+              <a class="nav-link text-light" aria-current="page" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="#">Disabled</a>
+            </li>
+          </ul>
+    </div>
+</footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
