--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
     <main>
       <h2 class="animate__animated animate__backInRight">Star Wars</h2>
-      <img src="img/sw_logo_stacked_2x-52b4f6d33087_7ef430af.png" alt="Star Wars" width="500 px">
+      <img src="img/robot-1083158_640.png" alt="Star Wars" width="500 px">
       <br><br>
     </main>
     <footer class="center">      
