--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-black text-light text-center nav-underline">
             <div class="container-fluid">
-              <a class="navbar-brand text-light" href="#">Star Wars Person</a>
+              <a class="navbar-brand text-light" href="index.html">Star Wars Person</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
