--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link text-light" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link text-light" aria-current="page" href="index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link text-light" href="registro.html">Registrarse</a>
@@ -33,7 +33,7 @@
                     <a class="nav-link text-light" href="login.html">Ingresar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-light">Disabled</a>
+                    <a class="nav-link text-light" href ="novedades.html">Novedades</a>
                   </li>
 
                   <li class="nav-item dropdown">
