--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                             <a class="nav-link text-info" href="#">Ir a</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-info" href="#">Mundo Stard Wars</a>
+                            <a class="nav-link text-info" href="index.html">Mundo Stard Wars</a>
                         </li>
                     </ul>                              
                 </div>
