--- a/index.html
+++ b/index.html
@@ -89,21 +89,14 @@
 
 <footer>
     <div class="container-fluid bg-black text-light text-center">
-        <ul class="nav justify-content-center nav-underline">
-            <li class="nav-item">
-              <a class="nav-link text-light" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light" href="#">Disabled</a>
-            </li>
-          </ul>
+         <div class="social-icons">
+    <a href="https://www.facebook.com" class="social-icon" target="_blank"><i class="fab fa-facebook-square"></i></a>
+    <a href="https://www.twitter.com" class="social-icon" target="_blank"><i class="fab fa-twitter-square"></i></a>
+    <a href="https://www.instagram.com" class="social-icon" target="_blank"><i class="fab fa-instagram-square"></i></a>
+    <a href="https://www.linkedin.com" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.youtube.com" class="social-icon" target="_blank"><i class="fab fa-youtube-square"></i></a>
     </div>
+   
 </footer>
 
 
