--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
     </main>
     <footer class="center">      
           <p class="copy">Derechos reservados ©2024</p>
-        </div>
+ <div class="social-icons">
+    <a href="https://www.facebook.com" class="social-icon" target="_blank"><i class="fab fa-facebook-square"></i></a>
+    <a href="https://www.twitter.com" class="social-icon" target="_blank"><i class="fab fa-twitter-square"></i></a>
+    <a href="https://www.instagram.com" class="social-icon" target="_blank"><i class="fab fa-instagram-square"></i></a>
+    <a href="https://www.linkedin.com" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.youtube.com" class="social-icon" target="_blank"><i class="fab fa-youtube-square"></i></a>
+    </div>
+    </div>
         <section>
           <div class="container">
             
